# boris_pusher

./: README.txt  pyproject.toml
Older files/: rkg.py  rkg_modified.py  test_max_B.py  test_xy.py
modules/: constants.py  data_plotting.py  fields.py  functions.py  main.py  particle.py  rkg.py  rkg_modified.py
scripts/: backup.py  execute.py  paralelized_code.py  run_rkg.py  test_boris.py  test_particle_approach.py  test_xy.py
