[tool.poetry]
name = "boris-pusher"
version = "0.1.0"
description = ""
authors = ["Samuel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.2.2"
jupyter = "^1.1.1"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
black = "^24.8.0"
jupyter-black = "^0.4.0"
ipykernel = "^6.29.5"
tqdm = "^4.66.5"
numba = "^0.60.0"
scipy = "^1.14.1"
ipywidgets = "^8.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
